# my_mixr

./: .gitignore  Makefile  README.md  meson.build
original/src/: meson.build
src/: main.cpp  meson.build
src/base/: factory.cpp  meson.build
src/models/: meson.build
src/simulation/: meson.build
